--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/docs/{{ if site.Params.doks.docsVersioning }}{{ site.Params.doks.docsVersion }}/{{ end }}guides/example-guide/" role="button">Start Learning</a>
+      <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/kubejs/getting-started/introduction/" role="button">Start Learning</a>
       {{ .Content }}
     </div>
   </div>
