fix: update styling for badges

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -1,1 +1,12 @@
 // Put your custom SCSS code here
+.startup-scripts {
+    color: #26b36c !important;
+}
+
+.client-scripts {
+    color: #e67e23 !important;
+}
+
+.server-scripts {
+    color: #b96ad9 !important;
+}
