--- a/layouts/partials/footer/footer.html
+++ b/layouts/partials/footer/footer.html
@@ -3,7 +3,7 @@
       <div class="row">
         <div class="col-lg-8 text-center text-lg-start">
           <ul class="list-inline">
-            <li class="list-inline-item">Powered by <a href="https://www.netlify.com/">Netlify</a> and <a href="https://getdoks.org/">Doks</a></li>
+            <li class="list-inline-item">Powered by <a href="https://getdoks.org/">Doks</a></li>
             {{ range .Site.Menus.footer -}}
               <li class="list-inline-item"><a class="text-muted" href="{{ .URL | relURL }}">{{ .Name }}</a></li>
             {{- end }}
