feat: add sourcelink technical information

--- a/assets/scss/common/_custom.scss
+++ b/assets/scss/common/_custom.scss
@@ -10,3 +10,11 @@
 .server-scripts {
     color: #b96ad9 !important;
 }
+
+table {
+    margin: 1.5rem 0;
+}
+
+.footnotes hr {
+    display: none;
+}
