feat: add sourcelink feature section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,8 +24,12 @@
     <div class="container">
       <div class="row justify-content-center text-center">
         <div class="col-lg-5">
-          <h2 class="h4">Mechanics Tweaks</h2>
+          <h2 class="h4">Mechanic Tweaks</h2>
           <p>Re-introduce <a href="/kubejs/tweaks/wilden/#re-enable-random-wilden-spawns">old Ars mechanics</a> back in to the game.</p>
+        </div>
+        <div class="col-lg-5">
+          <h2 class="h4">Sourcelink Tech Specs</h2>
+          <p>Learn the math behind the <a href="/docs/sourcelinks/agronomic-sourcelink/">Sourcelinks</a> to optimise your source generation.</p>
         </div>
         <div class="col-lg-5">
           <h2 class="h4">Example Recipes</h2>
