feat: add glyph recipes

--- a/layouts/partials/footer/script-footer-custom.html
+++ b/layouts/partials/footer/script-footer-custom.html
@@ -1,3 +1,2 @@
-{{ if eq (hugo.Environment) "production" -}}
-  {{ partial "footer/esbuild" (dict "src" "js/instantpage.js" "load" "async" "transpile" false) -}}
-{{ end -}}
+{{ if eq (hugo.Environment) "production" -}} {{ partial "footer/esbuild" (dict
+"src" "js/instantpage.js" "load" "async" "transpile" false) -}} {{ end -}}
