--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,50 +6,68 @@
     </div>
     <div class="col-lg-9 col-xl-8 text-center">
       <p class="lead">{{ .Params.lead | safeHTML }}</p>
-      <a class="btn btn-primary btn-cta rounded-pill btn-lg my-3" href="/docs/introduction/who-is-this-for/" role="button">Start Learning</a>
+      <a
+        class="btn btn-primary btn-cta rounded-pill btn-lg my-3"
+        href="/docs/introduction/who-is-this-for/"
+        role="button"
+        >Start Learning</a
+      >
       {{ .Content }}
     </div>
   </div>
 </section>
-{{ end }}
-
-{{ define "sidebar-prefooter" }}
-  {{ if site.Params.doks.backgroundDots -}}
-  <div class="d-flex justify-content-start">
-    <div class="bg-dots"></div>
-  </div>
-  {{ end -}}
-  {{ if eq $.Site.Language.LanguageName "English" }}
-  <section class="section section-md section-features">
-    <div class="container">
-      <div class="row justify-content-center text-center">
-        <div class="col-lg-5">
-          <h2 class="h4">Mechanic Tweaks</h2>
-          <p>Re-introduce <a href="/kubejs/tweaks/wilden/#re-enable-random-wilden-spawns">old Ars mechanics</a> back in to the game.</p>
-        </div>
-        <div class="col-lg-5">
-          <h2 class="h4">Sourcelink Tech Specs</h2>
-          <p>Learn the math behind the <a href="/docs/sourcelinks/agronomic-sourcelink/">Sourcelinks</a> to optimise your source generation.</p>
-        </div>
-        <div class="col-lg-5">
-          <h2 class="h4">Example Recipes</h2>
-          <p>Find out how to add your own <a href="/kubejs/recipes/caster_tomes/#add-a-new-caster-tome">Caster Tomes</a>!</p>
-        </div>
+{{ end }} {{ define "sidebar-prefooter" }} {{ if site.Params.doks.backgroundDots
+-}}
+<div class="d-flex justify-content-start">
+  <div class="bg-dots"></div>
+</div>
+{{ end -}} {{ if eq $.Site.Language.LanguageName "English" }}
+<section class="section section-md section-features">
+  <div class="container">
+    <div class="row justify-content-center text-center">
+      <div class="col-lg-5">
+        <h2 class="h4">Mechanic Tweaks</h2>
+        <p>
+          Re-introduce
+          <a href="/kubejs/tweaks/wilden/#re-enable-random-wilden-spawns"
+            >old Ars mechanics</a
+          >
+          back in to the game.
+        </p>
+      </div>
+      <div class="col-lg-5">
+        <h2 class="h4">Sourcelink Tech Specs</h2>
+        <p>
+          Learn the math behind the
+          <a href="/docs/sourcelinks/agronomic-sourcelink/">Sourcelinks</a> to
+          optimise your source generation.
+        </p>
+      </div>
+      <div class="col-lg-5">
+        <h2 class="h4">Example Recipes</h2>
+        <p>
+          Find out how to add your own
+          <a href="/kubejs/recipes/caster_tomes/#add-a-new-caster-tome"
+            >Caster Tomes</a
+          >!
+        </p>
       </div>
     </div>
-  </section>
-  {{ end }}
-{{ end }}
-
-{{ define "sidebar-footer" }}
-{{ if site.Params.doks.sectionFooter -}}
+  </div>
+</section>
+{{ end }} {{ end }} {{ define "sidebar-footer" }} {{ if
+site.Params.doks.sectionFooter -}}
 <section class="section section-md container-fluid bg-light">
   <div class="row justify-content-center text-center">
     <div class="col-lg-7">
       <h2 class="mt-2">Start building with Doks today</h2>
-      <a class="btn btn-primary rounded-pill px-4 my-2" href="/docs/{{ if site.Params.doks.docsVersioning }}{{ site.Params.doks.docsVersion }}/{{ end }}prologue/introduction/" role="button">{{ i18n "get-started" }}</a>
+      <a
+        class="btn btn-primary rounded-pill px-4 my-2"
+        href="/docs/{{ if site.Params.doks.docsVersioning }}{{ site.Params.doks.docsVersion }}/{{ end }}prologue/introduction/"
+        role="button"
+        >{{ i18n "get-started" }}</a
+      >
     </div>
   </div>
 </section>
-{{ end -}}
-{{ end }}
+{{ end -}} {{ end }}
