fix: add toSorted again

--- a/src/components/sidebar/Section.astro
+++ b/src/components/sidebar/Section.astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 import Entry from "./Entry.astro";
+import "core-js/es/array/to-sorted";
 
 const { entry } = Astro.props;
 
