--- a/src/components/Sidebar.astro
+++ b/src/components/Sidebar.astro
@@ -1,6 +1,7 @@
 ---
 import { getCollection } from 'astro:content';
 import Section from './sidebar/Section.astro';
+import "core-js/es/array/to-sorted";
 
 const { entry } = Astro.props;
 
