--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -2,12 +2,14 @@
 interface Props {
     type: 'note' | 'callout' | 'caution' | 'tip';
     title: string;
+    icon: any;
 }
 
 
-const { type, title } = Astro.props
+const { type, title, icon: Icon } = Astro.props
 ---
 <div class=`callout callout-${type} d-flex flex-row mt-4 mb-4 pt-4 pe-4 pb-2 ps-3`>
+    {Icon && <Icon className="callout-icon me-2 mb-3" />}
     <div class="callout-content">
         <div class="callout-title">
             {title}
