--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ import { IconHeartFilled } from "@tabler/icons-react"
             <div class="col-lg-8 text-center text-lg-end">
                 <ul class="list-inline">
                     <li class="list-inline-item">
-                        Made with <span style="color:#e25555"><IconHeartFilled width={23} height={23} /></span> by Jarva
+                        Made with <span style="color:#e25555"><IconHeartFilled size={23} /></span> by Jarva
                     </li>
                 </ul>
             </div>
