--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -44,7 +44,7 @@ const sidebar = await getSidebar(entry);
                     <div class="page-footer-meta d-flex flex-column flex-md-row justify-content-between">
                         <div class="edit-page">
                             <a href={`${editLink}/${entry.collection}/${entry.id}`}>
-                                <IconPencil width={16} height={16} />
+                                <IconPencil size={16} />
                                 Edit this page on GitHub
                             </a>
                         </div>
