--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -1,9 +1,9 @@
 ---
-import { IconPencil } from "@tabler/icons-react"
+import { IconPencil, IconArrowLeft, IconArrowRight } from "@tabler/icons-react"
 import BaseLayout from "./BaseLayout.astro"
 import { editLink } from "../utils/constants"
 import Sidebar from "../components/Sidebar.astro";
-import { getSidebar, getHeadings, type GenericCollectionEntry } from "../utils/sidebar";
+import { getSidebar, getHeadings, type GenericCollectionEntry, getPreviousEntry, getNextEntry } from "../utils/sidebar";
 import type { MarkdownHeading } from "astro";
 import Heading from "../components/Heading.astro";
 
@@ -15,6 +15,9 @@ interface Props {
 const { entry, headings = [] } = Astro.props;
 const sidebar = await getSidebar(entry);
 const formattedHeadings = getHeadings(headings);
+
+const prev = getPreviousEntry(entry, sidebar);
+const next = getNextEntry(entry, sidebar);
 ---
 
 <BaseLayout title={`${entry.data.title} | Ars.Guide`} layout="section docs" collection={entry.collection}>
@@ -40,6 +43,20 @@ const formattedHeadings = getHeadings(headings);
                 </nav>
                 <main class="docs-content col-lg-11 col-xl-9">
                     <h1>{entry.data.title}</h1>
+                    <nav class="toc-mobile d-xl-none" aria-label="Quaternary navigation">
+                      <details>
+                        <summary>
+                          On this page
+                        </summary>
+                        <div class="page-links">
+                          <nav id="TableOfContents">
+                            <ul>
+                              {formattedHeadings.map(heading => <Heading heading={heading} />)}
+                            </ul>
+                          </nav>
+                        </div>
+                      </details>
+                    </nav>
                     <slot />
                     <div class="page-footer-meta d-flex flex-column flex-md-row justify-content-between">
                         <div class="edit-page">
@@ -48,6 +65,31 @@ const formattedHeadings = getHeadings(headings);
                                 Edit this page on GitHub
                             </a>
                         </div>
+                    </div>
+                    <div class="page-nav d-flex flex-column flex-sm-row">
+                      {prev != null && <div class="card w-100">
+                        <div class="card-body d-flex">
+                          <div class="d-flex flex-column justify-content-center">
+                            <IconArrowLeft size={20} />
+                          </div>
+                          <div class="d-flex flex-column">
+                            <div class="text-body-secondary">Prev</div>
+                            <a href={`/${prev.entry.collection}/${prev.entry.slug}`} class="stretched-link text-reset text-decoration-none">{prev.entry.data.title}</a>
+                          </div>
+                        </div>
+                      </div>}
+                      {prev != null && next != null && <div class="m-2"></div>}
+                      {next != null && <div class="card text-end w-100">
+                        <div class="card-body d-flex justify-content-end">
+                          <div class="d-flex flex-column">
+                            <div class="text-body-secondary">Next</div>
+                            <a href={`/${next?.entry.collection}/${next?.entry.slug}`} class="stretched-link text-reset text-decoration-none">{next?.entry.data.title}</a>
+                          </div>
+                          <div class="d-flex flex-column justify-content-center">
+                            <IconArrowRight size={20} />
+                          </div>
+                        </div>
+                      </div>}
                     </div>
                 </main>
             </div>
