--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,9 @@
 ---
 import Navbar from '../components/Navbar.astro'
 import Footer from '../components/Footer.astro';
+import SearchModal from '../components/SearchModal.astro';
 
-const { title, layout, collection } = Astro.props;
+const { title, layout, collection, sidebar } = Astro.props;
 ---
 
 <!DOCTYPE html>
@@ -17,7 +18,8 @@ const { title, layout, collection } = Astro.props;
     <title>{title}</title>
   </head>
   <body class={`single ${layout}`} data-bs-spy="scroll" data-bs-target="#toc" data-bs-root-margin="0px 0px -60%" data-bs-smooth-scroll="true" tabindex="0">
-    <Navbar active={collection} />
+    <Navbar active={collection} sidebar={sidebar} />
+    <SearchModal />
     <slot />
     <Footer />
   </body>
