fix: update start learning link

--- a/src/layouts/HeroLayout.astro
+++ b/src/layouts/HeroLayout.astro
@@ -16,7 +16,7 @@ const { frontmatter } = Astro.props;
                         <p class="lead">
                             Your un-official written guide for the technical side of Ars Nouveau
                         </p>
-                        <a href="/docs/" class="btn btn-primary btn-cta rounded-pill btn-lg my-3" role="button">
+                        <a href="/docs/introduction/who-is-this-for/" class="btn btn-primary btn-cta rounded-pill btn-lg my-3" role="button">
                         Start Learning</a>
                     </div>
                 </div>
