--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,7 +1,8 @@
 ---
 import Navbar from '../components/Navbar.astro'
 import Footer from '../components/Footer.astro';
-import SearchModal from '../components/SearchModal.astro';
+import SearchModal from '../components/search/Modal.astro';
+import Seo from '../components/Seo.astro';
 
 const { title, layout, collection, sidebar } = Astro.props;
 ---
@@ -9,15 +10,11 @@ const { title, layout, collection, sidebar } = Astro.props;
 <!DOCTYPE html>
 <html lang={Astro.currentLocale} data-bs-theme="auto">
   <head>
+    <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta charset="utf-8" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
+    <slot name="head" />
   </head>
-  <body class={`single ${layout}`} data-bs-spy="scroll" data-bs-target="#toc" data-bs-root-margin="0px 0px -60%" data-bs-smooth-scroll="true" tabindex="0">
+  <body class={`single ${layout}`} data-bs-spy="scroll" data-bs-target="#toc" data-bs-root-margin="0px 0px -60%" data-bs-smooth-scroll="true">
     <Navbar active={collection} sidebar={sidebar} />
     <SearchModal />
     <slot />
