--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -6,6 +6,7 @@ import Sidebar from "../components/Sidebar.astro";
 import { getSidebar, getHeadings, type GenericCollectionEntry, getPreviousEntry, getNextEntry } from "../utils/sidebar";
 import type { MarkdownHeading } from "astro";
 import Heading from "../components/Heading.astro";
+import Seo from "../components/Seo.astro";
 
 interface Props {
   entry: GenericCollectionEntry;
@@ -20,7 +21,10 @@ const prev = getPreviousEntry(entry, sidebar);
 const next = getNextEntry(entry, sidebar);
 ---
 
-<BaseLayout title={`${entry.data.title} | Ars.Guide`} layout="section docs" sidebar={sidebar} collection={entry.collection}>
+<BaseLayout layout="section docs" sidebar={sidebar} collection={entry.collection}>
+  <Fragment slot="head">
+    <Seo title={entry.data.title} description={entry.data.description} path={`${entry.collection}/${entry.slug}`} />
+  </Fragment>
     <div class="wrap container-lg" role="document">
         <div class="content">
             <div class="row flex-xl-nowrap">
