--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,9 +2,8 @@
 import Navbar from '../components/Navbar.astro'
 import Footer from '../components/Footer.astro';
 import SearchModal from '../components/search/Modal.astro';
-import Seo from '../components/Seo.astro';
 
-const { title, layout, collection, sidebar } = Astro.props;
+const { layout, collection, sidebar } = Astro.props;
 ---
 
 <!DOCTYPE html>
