--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -14,7 +14,8 @@ const { active, sidebar } = Astro.props;
 ---
 
 <!-- <div class="header-bar sticky-top"></div> -->
-<header class="navbar sticky-top navbar-expand-lg">
+<div class="sticky-top">
+<header class="navbar navbar-expand-lg">
     <div class="container-lg">
         <a class="navbar-brand me-auto me-lg-3" href="/">{siteName}</a>
         <button id="searchToggleMobile" class="btn btn-link nav-link mx-2 d-lg-none" type="button" aria-label="Search website">
@@ -74,3 +75,4 @@ const { active, sidebar } = Astro.props;
         </div>
     </div>
 </header>
+</div>
