--- a/src/layouts/HeroLayout.astro
+++ b/src/layouts/HeroLayout.astro
@@ -1,10 +1,14 @@
 ---
+import Seo from "../components/Seo.astro";
 import BaseLayout from "./BaseLayout.astro"
 
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout title={frontmatter.title} layout="home">
+    <Fragment slot="head">
+        <Seo />
+    </Fragment>
     <div class="wrap container-lg" role="document">
         <div class="content">
             <section class="section container-fluid mt-n3 pb-3">
