feat: update heading and copy

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,7 +24,7 @@ const { layout, collection, sidebar } = Astro.props;
 </html>
 
 <script>
-  import 'bootstrap/dist/js/bootstrap.bundle.min.js'
+  import 'bootstrap';
 </script>
 
 <style is:global lang="scss">
