feat: add spell form

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,6 +25,7 @@ const { layout, collection, sidebar } = Astro.props;
 
 <script>
   import 'bootstrap';
+  import 'tom-select';
 </script>
 
 <style is:global lang="scss">
