--- a/src/components/SpellForm.astro
+++ b/src/components/SpellForm.astro
@@ -31,8 +31,8 @@
         <textarea name="description" class="form-control" id="description" placeholder="Optional..." />
     </div>
     <div class="mb-3 form-check">
-        <input name="length" type="checkbox" class="form-check-input" value="" id="length" />
-        <label for="length" class="form-check-label">Requires spell length increase?</label>
+        <input name="infinite" type="checkbox" class="form-check-input" value="" id="infinite" />
+        <label for="infinite" class="form-check-label">Requires spell length increase?</label>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
