fix: add fallbacks to fields

--- a/src/components/SpellForm.astro
+++ b/src/components/SpellForm.astro
@@ -24,7 +24,7 @@
     </div>
     <div class="mb-3">
         <label for="versions" class="form-label">Versions</label>
-        <input name="versions" class="form-control" id="versions" />
+        <input name="versions" required class="form-control" id="versions" />
     </div>
     <div class="mb-3">
         <label for="description" class="form-label">Description</label>
