--- a/src/components/SpellForm.astro
+++ b/src/components/SpellForm.astro
@@ -12,7 +12,7 @@
     </div>
     <div class="mb-3">
         <label for="glyphs" class="form-label">Glyphs</label>
-        <input name="glyphs" required pattern="[A-z ]+" type="text" class="form-control" id="glyphs" />
+        <input name="glyphs" required class="form-control" id="glyphs" />
     </div>
     <div class="mb-3">
         <label for="category" class="form-label">Category</label>
@@ -39,6 +39,15 @@
 
 <script>
     import TomSelect from 'tom-select';
+    import { addons, categories, versions, glyphs, spellFormSchema } from '../utils/spell-form';
+    new TomSelect("#glyphs", {
+        labelField: 'text',
+	    searchField: ['text'],
+        options: glyphs,
+        create: true,
+        hideSelected: false,
+        duplicates: true
+    });
     new TomSelect("#category", {
         optgroups: [
             { value: 'combat', label: 'Combat' },
@@ -47,41 +56,19 @@
         optgroupField: 'class',
         labelField: 'text',
 	    searchField: ['text'],
-        options: [
-            { class: "combat", value: "aggressive", text: "Aggressive" },
-            { class: "combat", value: "defensive", text: "Defensive" },
-            { class: "combat", value: "support", text: "Support" },
-            { class: "other", value: "exploration", text: "Exploration" },
-            { class: "other", value: "utility", text: "Utility" },
-            { class: "other", value: "automation", text: "Automation" },
-            { class: "other", value: "fun", text: "Fun" },
-        ],
+        options: categories,
         maxItems: 1,
     });
     new TomSelect("#addons", {
         labelField: 'text',
 	    searchField: ['text'],
-        options: [
-            { value: "tmg", text: "Too Many Glyphs" },
-            { value: "neg", text: "Not Enough Glyphs" },
-            { value: "omega", text: "Ars Omega" },
-            { value: "artifice", text: "Ars Artifice" },
-            { value: "additions", text: "Ars Additions" },
-            { value: "elemental", text: "Ars Elemental" },
-            { value: "plus", text: "Ars Plus" },
-            { value: "trinkets", text: "Ars Trinkets" },
-        ],
+        options: addons,
         create: true
     });
     new TomSelect("#versions", {
         labelField: 'value',
 	    searchField: ['value'],
-        options: [
-            { value: "1.16.5" },
-            { value: "1.18.2" },
-            { value: "1.19.2" },
-            { value: "1.20.1" },
-        ]
+        options: versions
     });
     const form = document.getElementById('spellForm');
     const inputs = document.querySelectorAll('#spellForm input');
@@ -99,6 +86,12 @@
     form?.addEventListener('submit', (event) => {
         form.classList.add('was-validated');
         if (!(form as HTMLFormElement).checkValidity()) {
+            event.preventDefault()
+		    event.stopPropagation()
+        }
+        const formData = new FormData(form as HTMLFormElement);
+        const parsed = spellFormSchema.safeParse(formData);
+        if (!parsed.success) {
             event.preventDefault()
 		    event.stopPropagation()
         }
