--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -83,9 +83,17 @@
     color: #fff;
 }
 
+.ts-wrapper.multi .ts-control > input {
+    color: #000;
+}
+
 @include color-mode(dark) {
     .ts-wrapper.multi .ts-control > div {
         background: hsl(224, 100%, 85%);
         color: #000;
+    }
+
+    .ts-wrapper.multi .ts-control > input {
+        color: #fff;
     }
 }
