--- a/src/components/Spell.astro
+++ b/src/components/Spell.astro
@@ -27,11 +27,11 @@ const images = import.meta.glob<{ default: ImageMetadata }>('/assets/glyphs/*.{j
         }
         return ` ➝ ${getGlyphText(glyph)} ➝ `;
     })} {glyphs.length > 10 && <span class="badge text-bg-dark">Requires infinite spell demo</span>}</h5>
-    {description && <p class="card-text" style="white-space: pre-line;">
-        <Fragment set:html={description} />
+    <p class="card-text" style="white-space: pre-line;">
+        {description && <Fragment set:html={description} />}
         <div>
             {addons.map(addon => <span class="badge text-bg-dark">{getAddonText(addon)}</span>)}
             {versions.map(version => <span class="badge text-bg-dark">{version}</span>)}
         </div>
-    </p>}
+    </p>
 </Fragment>
